--- a/SupplEx.html
+++ b/SupplEx.html
@@ -360,11 +360,12 @@ pre code {
 
 <div id="exercice" class="section level2">
 <h2>Exercice</h2>
+<p>Prepare an Rmd file compiled to html to answer the following questions.</p>
 <ol style="list-style-type: decimal">
 <li>Install the <code>rWSBIM1322</code> package with the following command.</li>
 </ol>
 <pre><code>BiocManager::install(&quot;rWSBIM1322&quot;)</code></pre>
-<p>Do not run the installation command in your R markdown file as it would download and install the package every time you knit the Rmd file.</p>
+<p><strong>IMPORTANT</strong>: Do <strong>not</strong> run the installation command in your R markdown file as it would download and install the package every time you knit the Rmd file.</p>
 <ol start="2" style="list-style-type: decimal">
 <li>Load the <code>cptac_se</code> data with</li>
 </ol>
@@ -373,6 +374,7 @@ pre code {
 <li><p>Familiarise yourself with the data. What class is it? How many samples/features? Check the feature and sample annotations.</p></li>
 <li><p>Proteins are identified/quantified by several peptides. Create a vector of protein names for the proteins that have at least 15 peptides.</p></li>
 <li><p>Visualise the intensity distributions of peptides intensities for each protein in each sample, making sure to discern sample from groups 6A and 6B.</p></li>
+<li><p>What R and package versions were used to analyse these data?</p></li>
 </ol>
 </div>
 
