--- a/SupplEx.html
+++ b/SupplEx.html
@@ -364,10 +364,10 @@ pre code {
 <ol style="list-style-type: decimal">
 <li>Install the <code>rWSBIM1322</code> package with the following command.</li>
 </ol>
-<pre><code>BiocManager::install(&quot;rWSBIM1322&quot;)</code></pre>
+<pre><code>BiocManager::install(&quot;UCLouvain-CBIO/rWSBIM1322&quot;)</code></pre>
 <p><strong>IMPORTANT</strong>: Do <strong>not</strong> run the installation command in your R markdown file as it would download and install the package every time you knit the Rmd file.</p>
 <ol start="2" style="list-style-type: decimal">
-<li>Load the <code>cptac_se</code> data with</li>
+<li>Load the <code>rWSBIM1322</code> package and the <code>cptac_se</code> data with</li>
 </ol>
 <pre><code>data(cptac_se)</code></pre>
 <ol start="3" style="list-style-type: decimal">
