--- a/SupplEx.html
+++ b/SupplEx.html
@@ -373,7 +373,7 @@ pre code {
 <ol start="3" style="list-style-type: decimal">
 <li><p>Familiarise yourself with the data. What class is it? How many samples/features? Check the feature and sample annotations.</p></li>
 <li><p>Proteins are identified/quantified by several peptides. Create a vector of protein names for the proteins that have at least 15 peptides.</p></li>
-<li><p>Visualise the intensity distributions of peptides intensities for each protein in each sample, making sure to discern sample from groups 6A and 6B.</p></li>
+<li><p>Use boxplots to visualise the intensity distributions of peptides intensities for the proteins of interest (see point 4) in each sample, making sure to discern sample from groups 6A and 6B.</p></li>
 <li><p>What R and package versions were used to analyse these data?</p></li>
 </ol>
 </div>
